parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CHANGE
    VALUE

Grammar

Rule 0     S' -> init
Rule 1     init -> comment code
Rule 2     init -> comment
Rule 3     code -> procedimientos main
Rule 4     code -> main procedimientos
Rule 5     code -> procedimientos main procedimientos
Rule 6     code -> main
Rule 7     code -> comment code
Rule 8     code -> code comment
Rule 9     procedimientos -> procedimiento procedimientos
Rule 10    procedimientos -> procedimiento
Rule 11    procedimiento -> proc
Rule 12    proc -> PROC ID LP instrucciones RP SEMICOLON
Rule 13    main -> MAIN LP instrucciones RP SEMICOLON
Rule 14    main -> MAIN LP RP SEMICOLON
Rule 15    instrucciones -> instruccion instrucciones
Rule 16    instrucciones -> instruccion
Rule 17    instruccion -> def
Rule 18    instruccion -> call
Rule 19    instruccion -> alter
Rule 20    instruccion -> not
Rule 21    instruccion -> print
Rule 22    instruccion -> iterative
Rule 23    instruccion -> case
Rule 24    instruccion -> mover
Rule 25    instruccion -> aleatorio
Rule 26    instruccion -> istrue
Rule 27    instruccion -> repeat
Rule 28    instruccion -> change
Rule 29    instruccion -> led
Rule 30    instruccion -> zigzag
Rule 31    instruccion -> zagzig
Rule 32    instruccion -> comment
Rule 33    break -> BREAK
Rule 34    def -> DEF LP ID COMMA TYPE COMMA value RP SEMICOLON
Rule 35    def -> DEF LP ID COMMA TYPE RP SEMICOLON
Rule 36    call -> CALL LP ID RP SEMICOLON
Rule 37    alter -> ALTER LP ID COMMA INTEGER RP SEMICOLON
Rule 38    alter -> ALTER LP ID COMMA ID RP SEMICOLON
Rule 39    not -> NOT LP ID RP
Rule 40    istrue -> ISTRUE LP ID RP SEMICOLON
Rule 41    print -> PRINT LP prints RP SEMICOLON
Rule 42    prints -> printexpr
Rule 43    prints -> prints printexpr
Rule 44    printexpr -> STRING
Rule 45    printexpr -> ID
Rule 46    iterative -> WHILE LP condicion RP LP instrucciones RP SEMICOLON
Rule 47    iterative -> UNTIL LP instrucciones RP LP condicion RP SEMICOLON
Rule 48    case -> CASE funciones SEMICOLON
Rule 49    case -> CASE ID funciones SEMICOLON
Rule 50    mover -> MOVER LP DIR RP SEMICOLON
Rule 51    aleatorio -> ALEATORIO LP RP SEMICOLON
Rule 52    zigzag -> ZIGZAG LP RP SEMICOLON
Rule 53    zagzig -> ZAGZIG LP RP SEMICOLON
Rule 54    led -> LED LP RP SEMICOLON
Rule 55    repeat -> REPEAT LP instrucciones break RP SEMICOLON
Rule 56    value -> INTEGER
Rule 57    value -> BOOL
Rule 58    value -> expression
Rule 59    value -> ID
Rule 60    value -> not
Rule 61    funciones -> funcion
Rule 62    funciones -> funciones funcion
Rule 63    funcion -> when then
Rule 64    funcion -> when then else
Rule 65    when -> WHEN LP condicion RP
Rule 66    when -> WHEN value
Rule 67    then -> THEN LP instrucciones RP
Rule 68    else -> ELSE LP instrucciones RP
Rule 69    condicion -> oper GT oper
Rule 70    condicion -> oper LT oper
Rule 71    condicion -> oper EQUAL oper
Rule 72    condicion -> oper DIF oper
Rule 73    condicion -> oper GTE oper
Rule 74    condicion -> oper LTE oper
Rule 75    condicion -> istrue
Rule 76    oper -> value
Rule 77    oper -> expression
Rule 78    change -> ID LP value RP SEMICOLON
Rule 79    expression -> expression PLUS term
Rule 80    expression -> expression MINUS term
Rule 81    expression -> term
Rule 82    term -> term STAR factor
Rule 83    term -> term SLASH factor
Rule 84    term -> factor
Rule 85    factor -> INTEGER
Rule 86    factor -> LP expression RP
Rule 87    comment -> COMMENT

Terminals, with rules where they appear

ALEATORIO            : 51
ALTER                : 37 38
BOOL                 : 57
BREAK                : 33
CALL                 : 36
CASE                 : 48 49
CHANGE               : 
COMMA                : 34 34 35 37 38
COMMENT              : 87
DEF                  : 34 35
DIF                  : 72
DIR                  : 50
ELSE                 : 68
EQUAL                : 71
GT                   : 69
GTE                  : 73
ID                   : 12 34 35 36 37 38 38 39 40 45 49 59 78
INTEGER              : 37 56 85
ISTRUE               : 40
LED                  : 54
LP                   : 12 13 14 34 35 36 37 38 39 40 41 46 46 47 47 50 51 52 53 54 55 65 67 68 78 86
LT                   : 70
LTE                  : 74
MAIN                 : 13 14
MINUS                : 80
MOVER                : 50
NOT                  : 39
PLUS                 : 79
PRINT                : 41
PROC                 : 12
REPEAT               : 55
RP                   : 12 13 14 34 35 36 37 38 39 40 41 46 46 47 47 50 51 52 53 54 55 65 67 68 78 86
SEMICOLON            : 12 13 14 34 35 36 37 38 40 41 46 47 48 49 50 51 52 53 54 55 78
SLASH                : 83
STAR                 : 82
STRING               : 44
THEN                 : 67
TYPE                 : 34 35
UNTIL                : 47
VALUE                : 
WHEN                 : 65 66
WHILE                : 46
ZAGZIG               : 53
ZIGZAG               : 52
error                : 

Nonterminals, with rules where they appear

aleatorio            : 25
alter                : 19
break                : 55
call                 : 18
case                 : 23
change               : 28
code                 : 1 7 8
comment              : 1 2 7 8 32
condicion            : 46 47 65
def                  : 17
else                 : 64
expression           : 58 77 79 80 86
factor               : 82 83 84
funcion              : 61 62
funciones            : 48 49 62
init                 : 0
instruccion          : 15 16
instrucciones        : 12 13 15 46 47 55 67 68
istrue               : 26 75
iterative            : 22
led                  : 29
main                 : 3 4 5 6
mover                : 24
not                  : 20 60
oper                 : 69 69 70 70 71 71 72 72 73 73 74 74
print                : 21
printexpr            : 42 43
prints               : 41 43
proc                 : 11
procedimiento        : 9 10
procedimientos       : 3 4 5 5 9
repeat               : 27
term                 : 79 80 81 82 83
then                 : 63 64
value                : 34 66 76 78
when                 : 63 64
zagzig               : 31
zigzag               : 30

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . comment code
    (2) init -> . comment
    (87) comment -> . COMMENT

    COMMENT         shift and go to state 3

    init                           shift and go to state 1
    comment                        shift and go to state 2

state 1

    (0) S' -> init .



state 2

    (1) init -> comment . code
    (2) init -> comment .
    (3) code -> . procedimientos main
    (4) code -> . main procedimientos
    (5) code -> . procedimientos main procedimientos
    (6) code -> . main
    (7) code -> . comment code
    (8) code -> . code comment
    (9) procedimientos -> . procedimiento procedimientos
    (10) procedimientos -> . procedimiento
    (13) main -> . MAIN LP instrucciones RP SEMICOLON
    (14) main -> . MAIN LP RP SEMICOLON
    (87) comment -> . COMMENT
    (11) procedimiento -> . proc
    (12) proc -> . PROC ID LP instrucciones RP SEMICOLON

    $end            reduce using rule 2 (init -> comment .)
    MAIN            shift and go to state 9
    COMMENT         shift and go to state 3
    PROC            shift and go to state 11

    comment                        shift and go to state 4
    code                           shift and go to state 5
    procedimientos                 shift and go to state 6
    main                           shift and go to state 7
    procedimiento                  shift and go to state 8
    proc                           shift and go to state 10

state 3

    (87) comment -> COMMENT .

    MAIN            reduce using rule 87 (comment -> COMMENT .)
    COMMENT         reduce using rule 87 (comment -> COMMENT .)
    PROC            reduce using rule 87 (comment -> COMMENT .)
    $end            reduce using rule 87 (comment -> COMMENT .)
    DEF             reduce using rule 87 (comment -> COMMENT .)
    CALL            reduce using rule 87 (comment -> COMMENT .)
    ALTER           reduce using rule 87 (comment -> COMMENT .)
    NOT             reduce using rule 87 (comment -> COMMENT .)
    PRINT           reduce using rule 87 (comment -> COMMENT .)
    WHILE           reduce using rule 87 (comment -> COMMENT .)
    UNTIL           reduce using rule 87 (comment -> COMMENT .)
    CASE            reduce using rule 87 (comment -> COMMENT .)
    MOVER           reduce using rule 87 (comment -> COMMENT .)
    ALEATORIO       reduce using rule 87 (comment -> COMMENT .)
    ISTRUE          reduce using rule 87 (comment -> COMMENT .)
    REPEAT          reduce using rule 87 (comment -> COMMENT .)
    ID              reduce using rule 87 (comment -> COMMENT .)
    LED             reduce using rule 87 (comment -> COMMENT .)
    ZIGZAG          reduce using rule 87 (comment -> COMMENT .)
    ZAGZIG          reduce using rule 87 (comment -> COMMENT .)
    RP              reduce using rule 87 (comment -> COMMENT .)
    BREAK           reduce using rule 87 (comment -> COMMENT .)


state 4

    (7) code -> comment . code
    (3) code -> . procedimientos main
    (4) code -> . main procedimientos
    (5) code -> . procedimientos main procedimientos
    (6) code -> . main
    (7) code -> . comment code
    (8) code -> . code comment
    (9) procedimientos -> . procedimiento procedimientos
    (10) procedimientos -> . procedimiento
    (13) main -> . MAIN LP instrucciones RP SEMICOLON
    (14) main -> . MAIN LP RP SEMICOLON
    (87) comment -> . COMMENT
    (11) procedimiento -> . proc
    (12) proc -> . PROC ID LP instrucciones RP SEMICOLON

    MAIN            shift and go to state 9
    COMMENT         shift and go to state 3
    PROC            shift and go to state 11

    comment                        shift and go to state 4
    code                           shift and go to state 12
    procedimientos                 shift and go to state 6
    main                           shift and go to state 7
    procedimiento                  shift and go to state 8
    proc                           shift and go to state 10

state 5

    (1) init -> comment code .
    (8) code -> code . comment
    (87) comment -> . COMMENT

    $end            reduce using rule 1 (init -> comment code .)
    COMMENT         shift and go to state 3

    comment                        shift and go to state 13

state 6

    (3) code -> procedimientos . main
    (5) code -> procedimientos . main procedimientos
    (13) main -> . MAIN LP instrucciones RP SEMICOLON
    (14) main -> . MAIN LP RP SEMICOLON

    MAIN            shift and go to state 9

    main                           shift and go to state 14

state 7

    (4) code -> main . procedimientos
    (6) code -> main .
    (9) procedimientos -> . procedimiento procedimientos
    (10) procedimientos -> . procedimiento
    (11) procedimiento -> . proc
    (12) proc -> . PROC ID LP instrucciones RP SEMICOLON

    COMMENT         reduce using rule 6 (code -> main .)
    $end            reduce using rule 6 (code -> main .)
    PROC            shift and go to state 11

    procedimientos                 shift and go to state 15
    procedimiento                  shift and go to state 8
    proc                           shift and go to state 10

state 8

    (9) procedimientos -> procedimiento . procedimientos
    (10) procedimientos -> procedimiento .
    (9) procedimientos -> . procedimiento procedimientos
    (10) procedimientos -> . procedimiento
    (11) procedimiento -> . proc
    (12) proc -> . PROC ID LP instrucciones RP SEMICOLON

    MAIN            reduce using rule 10 (procedimientos -> procedimiento .)
    COMMENT         reduce using rule 10 (procedimientos -> procedimiento .)
    $end            reduce using rule 10 (procedimientos -> procedimiento .)
    PROC            shift and go to state 11

    procedimiento                  shift and go to state 8
    procedimientos                 shift and go to state 16
    proc                           shift and go to state 10

state 9

    (13) main -> MAIN . LP instrucciones RP SEMICOLON
    (14) main -> MAIN . LP RP SEMICOLON

    LP              shift and go to state 17


state 10

    (11) procedimiento -> proc .

    PROC            reduce using rule 11 (procedimiento -> proc .)
    MAIN            reduce using rule 11 (procedimiento -> proc .)
    COMMENT         reduce using rule 11 (procedimiento -> proc .)
    $end            reduce using rule 11 (procedimiento -> proc .)


state 11

    (12) proc -> PROC . ID LP instrucciones RP SEMICOLON

    ID              shift and go to state 18


state 12

    (7) code -> comment code .
    (8) code -> code . comment
    (87) comment -> . COMMENT

  ! shift/reduce conflict for COMMENT resolved as shift
    $end            reduce using rule 7 (code -> comment code .)
    COMMENT         shift and go to state 3

  ! COMMENT         [ reduce using rule 7 (code -> comment code .) ]

    comment                        shift and go to state 13

state 13

    (8) code -> code comment .

    COMMENT         reduce using rule 8 (code -> code comment .)
    $end            reduce using rule 8 (code -> code comment .)


state 14

    (3) code -> procedimientos main .
    (5) code -> procedimientos main . procedimientos
    (9) procedimientos -> . procedimiento procedimientos
    (10) procedimientos -> . procedimiento
    (11) procedimiento -> . proc
    (12) proc -> . PROC ID LP instrucciones RP SEMICOLON

    COMMENT         reduce using rule 3 (code -> procedimientos main .)
    $end            reduce using rule 3 (code -> procedimientos main .)
    PROC            shift and go to state 11

    procedimientos                 shift and go to state 19
    procedimiento                  shift and go to state 8
    proc                           shift and go to state 10

state 15

    (4) code -> main procedimientos .

    COMMENT         reduce using rule 4 (code -> main procedimientos .)
    $end            reduce using rule 4 (code -> main procedimientos .)


state 16

    (9) procedimientos -> procedimiento procedimientos .

    MAIN            reduce using rule 9 (procedimientos -> procedimiento procedimientos .)
    COMMENT         reduce using rule 9 (procedimientos -> procedimiento procedimientos .)
    $end            reduce using rule 9 (procedimientos -> procedimiento procedimientos .)


state 17

    (13) main -> MAIN LP . instrucciones RP SEMICOLON
    (14) main -> MAIN LP . RP SEMICOLON
    (15) instrucciones -> . instruccion instrucciones
    (16) instrucciones -> . instruccion
    (17) instruccion -> . def
    (18) instruccion -> . call
    (19) instruccion -> . alter
    (20) instruccion -> . not
    (21) instruccion -> . print
    (22) instruccion -> . iterative
    (23) instruccion -> . case
    (24) instruccion -> . mover
    (25) instruccion -> . aleatorio
    (26) instruccion -> . istrue
    (27) instruccion -> . repeat
    (28) instruccion -> . change
    (29) instruccion -> . led
    (30) instruccion -> . zigzag
    (31) instruccion -> . zagzig
    (32) instruccion -> . comment
    (34) def -> . DEF LP ID COMMA TYPE COMMA value RP SEMICOLON
    (35) def -> . DEF LP ID COMMA TYPE RP SEMICOLON
    (36) call -> . CALL LP ID RP SEMICOLON
    (37) alter -> . ALTER LP ID COMMA INTEGER RP SEMICOLON
    (38) alter -> . ALTER LP ID COMMA ID RP SEMICOLON
    (39) not -> . NOT LP ID RP
    (41) print -> . PRINT LP prints RP SEMICOLON
    (46) iterative -> . WHILE LP condicion RP LP instrucciones RP SEMICOLON
    (47) iterative -> . UNTIL LP instrucciones RP LP condicion RP SEMICOLON
    (48) case -> . CASE funciones SEMICOLON
    (49) case -> . CASE ID funciones SEMICOLON
    (50) mover -> . MOVER LP DIR RP SEMICOLON
    (51) aleatorio -> . ALEATORIO LP RP SEMICOLON
    (40) istrue -> . ISTRUE LP ID RP SEMICOLON
    (55) repeat -> . REPEAT LP instrucciones break RP SEMICOLON
    (78) change -> . ID LP value RP SEMICOLON
    (54) led -> . LED LP RP SEMICOLON
    (52) zigzag -> . ZIGZAG LP RP SEMICOLON
    (53) zagzig -> . ZAGZIG LP RP SEMICOLON
    (87) comment -> . COMMENT

    RP              shift and go to state 21
    DEF             shift and go to state 39
    CALL            shift and go to state 41
    ALTER           shift and go to state 42
    NOT             shift and go to state 43
    PRINT           shift and go to state 44
    WHILE           shift and go to state 45
    UNTIL           shift and go to state 46
    CASE            shift and go to state 47
    MOVER           shift and go to state 48
    ALEATORIO       shift and go to state 49
    ISTRUE          shift and go to state 50
    REPEAT          shift and go to state 51
    ID              shift and go to state 40
    LED             shift and go to state 52
    ZIGZAG          shift and go to state 53
    ZAGZIG          shift and go to state 54
    COMMENT         shift and go to state 3

    instrucciones                  shift and go to state 20
    instruccion                    shift and go to state 22
    def                            shift and go to state 23
    call                           shift and go to state 24
    alter                          shift and go to state 25
    not                            shift and go to state 26
    print                          shift and go to state 27
    iterative                      shift and go to state 28
    case                           shift and go to state 29
    mover                          shift and go to state 30
    aleatorio                      shift and go to state 31
    istrue                         shift and go to state 32
    repeat                         shift and go to state 33
    change                         shift and go to state 34
    led                            shift and go to state 35
    zigzag                         shift and go to state 36
    zagzig                         shift and go to state 37
    comment                        shift and go to state 38

state 18

    (12) proc -> PROC ID . LP instrucciones RP SEMICOLON

    LP              shift and go to state 55


state 19

    (5) code -> procedimientos main procedimientos .

    COMMENT         reduce using rule 5 (code -> procedimientos main procedimientos .)
    $end            reduce using rule 5 (code -> procedimientos main procedimientos .)


state 20

    (13) main -> MAIN LP instrucciones . RP SEMICOLON

    RP              shift and go to state 56


state 21

    (14) main -> MAIN LP RP . SEMICOLON

    SEMICOLON       shift and go to state 57


state 22

    (15) instrucciones -> instruccion . instrucciones
    (16) instrucciones -> instruccion .
    (15) instrucciones -> . instruccion instrucciones
    (16) instrucciones -> . instruccion
    (17) instruccion -> . def
    (18) instruccion -> . call
    (19) instruccion -> . alter
    (20) instruccion -> . not
    (21) instruccion -> . print
    (22) instruccion -> . iterative
    (23) instruccion -> . case
    (24) instruccion -> . mover
    (25) instruccion -> . aleatorio
    (26) instruccion -> . istrue
    (27) instruccion -> . repeat
    (28) instruccion -> . change
    (29) instruccion -> . led
    (30) instruccion -> . zigzag
    (31) instruccion -> . zagzig
    (32) instruccion -> . comment
    (34) def -> . DEF LP ID COMMA TYPE COMMA value RP SEMICOLON
    (35) def -> . DEF LP ID COMMA TYPE RP SEMICOLON
    (36) call -> . CALL LP ID RP SEMICOLON
    (37) alter -> . ALTER LP ID COMMA INTEGER RP SEMICOLON
    (38) alter -> . ALTER LP ID COMMA ID RP SEMICOLON
    (39) not -> . NOT LP ID RP
    (41) print -> . PRINT LP prints RP SEMICOLON
    (46) iterative -> . WHILE LP condicion RP LP instrucciones RP SEMICOLON
    (47) iterative -> . UNTIL LP instrucciones RP LP condicion RP SEMICOLON
    (48) case -> . CASE funciones SEMICOLON
    (49) case -> . CASE ID funciones SEMICOLON
    (50) mover -> . MOVER LP DIR RP SEMICOLON
    (51) aleatorio -> . ALEATORIO LP RP SEMICOLON
    (40) istrue -> . ISTRUE LP ID RP SEMICOLON
    (55) repeat -> . REPEAT LP instrucciones break RP SEMICOLON
    (78) change -> . ID LP value RP SEMICOLON
    (54) led -> . LED LP RP SEMICOLON
    (52) zigzag -> . ZIGZAG LP RP SEMICOLON
    (53) zagzig -> . ZAGZIG LP RP SEMICOLON
    (87) comment -> . COMMENT

    RP              reduce using rule 16 (instrucciones -> instruccion .)
    BREAK           reduce using rule 16 (instrucciones -> instruccion .)
    DEF             shift and go to state 39
    CALL            shift and go to state 41
    ALTER           shift and go to state 42
    NOT             shift and go to state 43
    PRINT           shift and go to state 44
    WHILE           shift and go to state 45
    UNTIL           shift and go to state 46
    CASE            shift and go to state 47
    MOVER           shift and go to state 48
    ALEATORIO       shift and go to state 49
    ISTRUE          shift and go to state 50
    REPEAT          shift and go to state 51
    ID              shift and go to state 40
    LED             shift and go to state 52
    ZIGZAG          shift and go to state 53
    ZAGZIG          shift and go to state 54
    COMMENT         shift and go to state 3

    instruccion                    shift and go to state 22
    instrucciones                  shift and go to state 58
    def                            shift and go to state 23
    call                           shift and go to state 24
    alter                          shift and go to state 25
    not                            shift and go to state 26
    print                          shift and go to state 27
    iterative                      shift and go to state 28
    case                           shift and go to state 29
    mover                          shift and go to state 30
    aleatorio                      shift and go to state 31
    istrue                         shift and go to state 32
    repeat                         shift and go to state 33
    change                         shift and go to state 34
    led                            shift and go to state 35
    zigzag                         shift and go to state 36
    zagzig                         shift and go to state 37
    comment                        shift and go to state 38

state 23

    (17) instruccion -> def .

    DEF             reduce using rule 17 (instruccion -> def .)
    CALL            reduce using rule 17 (instruccion -> def .)
    ALTER           reduce using rule 17 (instruccion -> def .)
    NOT             reduce using rule 17 (instruccion -> def .)
    PRINT           reduce using rule 17 (instruccion -> def .)
    WHILE           reduce using rule 17 (instruccion -> def .)
    UNTIL           reduce using rule 17 (instruccion -> def .)
    CASE            reduce using rule 17 (instruccion -> def .)
    MOVER           reduce using rule 17 (instruccion -> def .)
    ALEATORIO       reduce using rule 17 (instruccion -> def .)
    ISTRUE          reduce using rule 17 (instruccion -> def .)
    REPEAT          reduce using rule 17 (instruccion -> def .)
    ID              reduce using rule 17 (instruccion -> def .)
    LED             reduce using rule 17 (instruccion -> def .)
    ZIGZAG          reduce using rule 17 (instruccion -> def .)
    ZAGZIG          reduce using rule 17 (instruccion -> def .)
    COMMENT         reduce using rule 17 (instruccion -> def .)
    RP              reduce using rule 17 (instruccion -> def .)
    BREAK           reduce using rule 17 (instruccion -> def .)


state 24

    (18) instruccion -> call .

    DEF             reduce using rule 18 (instruccion -> call .)
    CALL            reduce using rule 18 (instruccion -> call .)
    ALTER           reduce using rule 18 (instruccion -> call .)
    NOT             reduce using rule 18 (instruccion -> call .)
    PRINT           reduce using rule 18 (instruccion -> call .)
    WHILE           reduce using rule 18 (instruccion -> call .)
    UNTIL           reduce using rule 18 (instruccion -> call .)
    CASE            reduce using rule 18 (instruccion -> call .)
    MOVER           reduce using rule 18 (instruccion -> call .)
    ALEATORIO       reduce using rule 18 (instruccion -> call .)
    ISTRUE          reduce using rule 18 (instruccion -> call .)
    REPEAT          reduce using rule 18 (instruccion -> call .)
    ID              reduce using rule 18 (instruccion -> call .)
    LED             reduce using rule 18 (instruccion -> call .)
    ZIGZAG          reduce using rule 18 (instruccion -> call .)
    ZAGZIG          reduce using rule 18 (instruccion -> call .)
    COMMENT         reduce using rule 18 (instruccion -> call .)
    RP              reduce using rule 18 (instruccion -> call .)
    BREAK           reduce using rule 18 (instruccion -> call .)


state 25

    (19) instruccion -> alter .

    DEF             reduce using rule 19 (instruccion -> alter .)
    CALL            reduce using rule 19 (instruccion -> alter .)
    ALTER           reduce using rule 19 (instruccion -> alter .)
    NOT             reduce using rule 19 (instruccion -> alter .)
    PRINT           reduce using rule 19 (instruccion -> alter .)
    WHILE           reduce using rule 19 (instruccion -> alter .)
    UNTIL           reduce using rule 19 (instruccion -> alter .)
    CASE            reduce using rule 19 (instruccion -> alter .)
    MOVER           reduce using rule 19 (instruccion -> alter .)
    ALEATORIO       reduce using rule 19 (instruccion -> alter .)
    ISTRUE          reduce using rule 19 (instruccion -> alter .)
    REPEAT          reduce using rule 19 (instruccion -> alter .)
    ID              reduce using rule 19 (instruccion -> alter .)
    LED             reduce using rule 19 (instruccion -> alter .)
    ZIGZAG          reduce using rule 19 (instruccion -> alter .)
    ZAGZIG          reduce using rule 19 (instruccion -> alter .)
    COMMENT         reduce using rule 19 (instruccion -> alter .)
    RP              reduce using rule 19 (instruccion -> alter .)
    BREAK           reduce using rule 19 (instruccion -> alter .)


state 26

    (20) instruccion -> not .

    DEF             reduce using rule 20 (instruccion -> not .)
    CALL            reduce using rule 20 (instruccion -> not .)
    ALTER           reduce using rule 20 (instruccion -> not .)
    NOT             reduce using rule 20 (instruccion -> not .)
    PRINT           reduce using rule 20 (instruccion -> not .)
    WHILE           reduce using rule 20 (instruccion -> not .)
    UNTIL           reduce using rule 20 (instruccion -> not .)
    CASE            reduce using rule 20 (instruccion -> not .)
    MOVER           reduce using rule 20 (instruccion -> not .)
    ALEATORIO       reduce using rule 20 (instruccion -> not .)
    ISTRUE          reduce using rule 20 (instruccion -> not .)
    REPEAT          reduce using rule 20 (instruccion -> not .)
    ID              reduce using rule 20 (instruccion -> not .)
    LED             reduce using rule 20 (instruccion -> not .)
    ZIGZAG          reduce using rule 20 (instruccion -> not .)
    ZAGZIG          reduce using rule 20 (instruccion -> not .)
    COMMENT         reduce using rule 20 (instruccion -> not .)
    RP              reduce using rule 20 (instruccion -> not .)
    BREAK           reduce using rule 20 (instruccion -> not .)


state 27

    (21) instruccion -> print .

    DEF             reduce using rule 21 (instruccion -> print .)
    CALL            reduce using rule 21 (instruccion -> print .)
    ALTER           reduce using rule 21 (instruccion -> print .)
    NOT             reduce using rule 21 (instruccion -> print .)
    PRINT           reduce using rule 21 (instruccion -> print .)
    WHILE           reduce using rule 21 (instruccion -> print .)
    UNTIL           reduce using rule 21 (instruccion -> print .)
    CASE            reduce using rule 21 (instruccion -> print .)
    MOVER           reduce using rule 21 (instruccion -> print .)
    ALEATORIO       reduce using rule 21 (instruccion -> print .)
    ISTRUE          reduce using rule 21 (instruccion -> print .)
    REPEAT          reduce using rule 21 (instruccion -> print .)
    ID              reduce using rule 21 (instruccion -> print .)
    LED             reduce using rule 21 (instruccion -> print .)
    ZIGZAG          reduce using rule 21 (instruccion -> print .)
    ZAGZIG          reduce using rule 21 (instruccion -> print .)
    COMMENT         reduce using rule 21 (instruccion -> print .)
    RP              reduce using rule 21 (instruccion -> print .)
    BREAK           reduce using rule 21 (instruccion -> print .)


state 28

    (22) instruccion -> iterative .

    DEF             reduce using rule 22 (instruccion -> iterative .)
    CALL            reduce using rule 22 (instruccion -> iterative .)
    ALTER           reduce using rule 22 (instruccion -> iterative .)
    NOT             reduce using rule 22 (instruccion -> iterative .)
    PRINT           reduce using rule 22 (instruccion -> iterative .)
    WHILE           reduce using rule 22 (instruccion -> iterative .)
    UNTIL           reduce using rule 22 (instruccion -> iterative .)
    CASE            reduce using rule 22 (instruccion -> iterative .)
    MOVER           reduce using rule 22 (instruccion -> iterative .)
    ALEATORIO       reduce using rule 22 (instruccion -> iterative .)
    ISTRUE          reduce using rule 22 (instruccion -> iterative .)
    REPEAT          reduce using rule 22 (instruccion -> iterative .)
    ID              reduce using rule 22 (instruccion -> iterative .)
    LED             reduce using rule 22 (instruccion -> iterative .)
    ZIGZAG          reduce using rule 22 (instruccion -> iterative .)
    ZAGZIG          reduce using rule 22 (instruccion -> iterative .)
    COMMENT         reduce using rule 22 (instruccion -> iterative .)
    RP              reduce using rule 22 (instruccion -> iterative .)
    BREAK           reduce using rule 22 (instruccion -> iterative .)


state 29

    (23) instruccion -> case .

    DEF             reduce using rule 23 (instruccion -> case .)
    CALL            reduce using rule 23 (instruccion -> case .)
    ALTER           reduce using rule 23 (instruccion -> case .)
    NOT             reduce using rule 23 (instruccion -> case .)
    PRINT           reduce using rule 23 (instruccion -> case .)
    WHILE           reduce using rule 23 (instruccion -> case .)
    UNTIL           reduce using rule 23 (instruccion -> case .)
    CASE            reduce using rule 23 (instruccion -> case .)
    MOVER           reduce using rule 23 (instruccion -> case .)
    ALEATORIO       reduce using rule 23 (instruccion -> case .)
    ISTRUE          reduce using rule 23 (instruccion -> case .)
    REPEAT          reduce using rule 23 (instruccion -> case .)
    ID              reduce using rule 23 (instruccion -> case .)
    LED             reduce using rule 23 (instruccion -> case .)
    ZIGZAG          reduce using rule 23 (instruccion -> case .)
    ZAGZIG          reduce using rule 23 (instruccion -> case .)
    COMMENT         reduce using rule 23 (instruccion -> case .)
    RP              reduce using rule 23 (instruccion -> case .)
    BREAK           reduce using rule 23 (instruccion -> case .)


state 30

    (24) instruccion -> mover .

    DEF             reduce using rule 24 (instruccion -> mover .)
    CALL            reduce using rule 24 (instruccion -> mover .)
    ALTER           reduce using rule 24 (instruccion -> mover .)
    NOT             reduce using rule 24 (instruccion -> mover .)
    PRINT           reduce using rule 24 (instruccion -> mover .)
    WHILE           reduce using rule 24 (instruccion -> mover .)
    UNTIL           reduce using rule 24 (instruccion -> mover .)
    CASE            reduce using rule 24 (instruccion -> mover .)
    MOVER           reduce using rule 24 (instruccion -> mover .)
    ALEATORIO       reduce using rule 24 (instruccion -> mover .)
    ISTRUE          reduce using rule 24 (instruccion -> mover .)
    REPEAT          reduce using rule 24 (instruccion -> mover .)
    ID              reduce using rule 24 (instruccion -> mover .)
    LED             reduce using rule 24 (instruccion -> mover .)
    ZIGZAG          reduce using rule 24 (instruccion -> mover .)
    ZAGZIG          reduce using rule 24 (instruccion -> mover .)
    COMMENT         reduce using rule 24 (instruccion -> mover .)
    RP              reduce using rule 24 (instruccion -> mover .)
    BREAK           reduce using rule 24 (instruccion -> mover .)


state 31

    (25) instruccion -> aleatorio .

    DEF             reduce using rule 25 (instruccion -> aleatorio .)
    CALL            reduce using rule 25 (instruccion -> aleatorio .)
    ALTER           reduce using rule 25 (instruccion -> aleatorio .)
    NOT             reduce using rule 25 (instruccion -> aleatorio .)
    PRINT           reduce using rule 25 (instruccion -> aleatorio .)
    WHILE           reduce using rule 25 (instruccion -> aleatorio .)
    UNTIL           reduce using rule 25 (instruccion -> aleatorio .)
    CASE            reduce using rule 25 (instruccion -> aleatorio .)
    MOVER           reduce using rule 25 (instruccion -> aleatorio .)
    ALEATORIO       reduce using rule 25 (instruccion -> aleatorio .)
    ISTRUE          reduce using rule 25 (instruccion -> aleatorio .)
    REPEAT          reduce using rule 25 (instruccion -> aleatorio .)
    ID              reduce using rule 25 (instruccion -> aleatorio .)
    LED             reduce using rule 25 (instruccion -> aleatorio .)
    ZIGZAG          reduce using rule 25 (instruccion -> aleatorio .)
    ZAGZIG          reduce using rule 25 (instruccion -> aleatorio .)
    COMMENT         reduce using rule 25 (instruccion -> aleatorio .)
    RP              reduce using rule 25 (instruccion -> aleatorio .)
    BREAK           reduce using rule 25 (instruccion -> aleatorio .)


state 32

    (26) instruccion -> istrue .

    DEF             reduce using rule 26 (instruccion -> istrue .)
    CALL            reduce using rule 26 (instruccion -> istrue .)
    ALTER           reduce using rule 26 (instruccion -> istrue .)
    NOT             reduce using rule 26 (instruccion -> istrue .)
    PRINT           reduce using rule 26 (instruccion -> istrue .)
    WHILE           reduce using rule 26 (instruccion -> istrue .)
    UNTIL           reduce using rule 26 (instruccion -> istrue .)
    CASE            reduce using rule 26 (instruccion -> istrue .)
    MOVER           reduce using rule 26 (instruccion -> istrue .)
    ALEATORIO       reduce using rule 26 (instruccion -> istrue .)
    ISTRUE          reduce using rule 26 (instruccion -> istrue .)
    REPEAT          reduce using rule 26 (instruccion -> istrue .)
    ID              reduce using rule 26 (instruccion -> istrue .)
    LED             reduce using rule 26 (instruccion -> istrue .)
    ZIGZAG          reduce using rule 26 (instruccion -> istrue .)
    ZAGZIG          reduce using rule 26 (instruccion -> istrue .)
    COMMENT         reduce using rule 26 (instruccion -> istrue .)
    RP              reduce using rule 26 (instruccion -> istrue .)
    BREAK           reduce using rule 26 (instruccion -> istrue .)


state 33
